# farfor-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.run/: uvicorn.run.xml
charts/app/: Chart.yaml  secrets.yaml  values.yaml
charts/app/templates/: _helpers.tpl  certificate.yaml  deployment.yaml  ingress.yaml  issuer.yaml  secret.yaml  service.yaml
charts/ingress-nginx/: values.yaml
deploy/: Chart.yaml  secrets.dev.yaml  secrets.prod.yaml  values.yaml
deploy/templates/: deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
docker/: Dockerfile  docker-entrypoint.sh  gunicorn_conf.py
docs/: cli.md  getting_started.md
farfor_bot/: __main__.py  config.py  main.py  secutiry.py
farfor_bot/api/: dependencies.py
farfor_bot/api/routers/: __init__.py  auth.py  broadcast.py  health.py  staff.py  users.py  webhook.py
farfor_bot/api/routers/telegram/: __init__.py  telegram_users.py  webhook.py
farfor_bot/database/: __init__.py  alembic.ini  core.py
farfor_bot/database/alembic/: env.py
farfor_bot/database/alembic/versions/: 1621936118_user_table.py  1621948090_telegram_user_table.py  1621982468_staff_table.py  1622069758_staff_table.py
farfor_bot/models/: __init__.py  staff.py  telegram_user.py  user.py
farfor_bot/repositories/: __init__.py  base.py  staff.py  telegram_user.py  user.py
farfor_bot/schemas/: __init__.py  staff.py  telegram_user.py  token.py  user.py
farfor_bot/services/: __init__.py  telegram.py
tests/: conftest.py  factories.py
tests/api/: test_auth.py
