[tool.poetry]
name = "farfor-bot"
version = "0.1.0"
description = ""
authors = ["rkhakov <khakov.ruslan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
SQLAlchemy = "^1.4.15"
psycopg2-binary = "^2.8.6"
SQLAlchemy-Utils = "^0.37.4"
alembic = "^1.6.3"
sh = "^1.14.2"
tabulate = "^0.8.9"
python-telegram-bot = "^13.5"
python-multipart = "^0.0.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.23.1"
black = "^21.5b1"
isort = "^5.8.0"
flake8 = "^3.9.2"
mypy = "^0.812"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
farfor_bot = "farfor_bot.__main__:entrypoint"
